[workspace]

members = [
  "legacy-msg-data",
  "rustle",
  "ssb-crypto",
  "ssb-keyfile",
  "ssb-legacy-msg",
  "ssb-multiformats",
  "ssb-packetstream",
]

[patch.'https://github.com/sunrise-choir/legacy-msg-data.git']
"ssb-legacy-msg-data" = { path = "legacy-msg-data" }

[patch.'https://github.com/sunrise-choir/ssb-crypto.git']
"ssb-crypto" = { path = "ssb-crypto" }

[patch.'https://github.com/sunrise-choir/ssb-keyfile.git']
"ssb-keyfile" = { path = "ssb-keyfile" }

[patch.'https://github.com/sunrise-choir/ssb-legacy-msg.git']
"ssb-legacy-msg" = { path = "ssb-legacy-msg" }

[patch.'https://github.com/sunrise-choir/ssb-packetstream.git']
"ssb-packetstream" = { path = "ssb-packetstream" }

[patch.'https://github.com/sunrise-choir/ssb-publish.git']
"ssb-publish" = { path = "ssb-publish" }

[patch.'https://github.com/sunrise-choir/ssb-multiformats.git']
"ssb-multiformats" = { path = "ssb-multiformats" }
